fdo#69079 - fix multiple user gallery creations.

Change-Id: I0539e2708b973b8bea7bd63488277f00201c6c46